# sumologic-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
src/sumologic_mcp/: __main__.py  cli.py  credentials.py  server.py
src/sumologic_mcp/clients/: base.py  collector.py  siem.py  soar.py  state.py
src/sumologic_mcp/tools/: add_insight_comment.py  attach_note.py  claim_incident.py  ingest_logs.py  list_new_insights.py  resolve_insight.py
tests/unit/: test_clients.py  test_credentials.py  test_tools.py
